a few last updates

--- a/TESS_MAST.ipynb
+++ b/TESS_MAST.ipynb
@@ -255,6 +255,10 @@
     "vline = Span(location=(tpeak - 2457000), dimension='height', line_color='#8c0051', line_width=1)\n",
     "bfig.renderers.extend([vline])\n",
     "\n",
+    "# Labeling the axes\n",
+    "bfig.xaxis.axis_label = \"Time (BTJD)\"\n",
+    "bfig.yaxis.axis_label = \"Flux\"\n",
+    "\n",
     "plotting.show(bfig)"
    ]
   },
@@ -468,6 +472,7 @@
    "source": [
     "sources = Catalogs.query_object(catalog=\"TIC\", objectname=f\"TIC {tic_id}\", radius=10*u.arcmin)\n",
     "sources = sources[sources[\"Tmag\"] < 12]\n",
+    "print(f\"Number of sources: {len(sources)}\")\n",
     "print(sources)"
    ]
   },
@@ -601,6 +606,10 @@
     "bfig.circle(variable_lc[\"TIME\"],variable_lc[\"FLUX_RAW\"], fill_color=\"black\",size=4, line_color=None)\n",
     "bfig.line(variable_lc[\"TIME\"],variable_lc[\"FLUX_RAW\"], line_color='black')\n",
     "\n",
+    "# Labeling the axes\n",
+    "bfig.xaxis.axis_label = \"Time (BTJD)\"\n",
+    "bfig.yaxis.axis_label = \"Flux\"\n",
+    "\n",
     "plotting.show(bfig)"
    ]
   },
@@ -638,9 +647,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bfig = plotting.figure(plot_width=850, plot_height=300, title=f\"Periodogram (TIC{variable_tic_id})\")\n",
+    "bfig = plotting.figure(plot_width=850, plot_height=300, x_axis_type=\"log\", x_range=(0.008, 1),\n",
+    "                       title=f\"Periodogram (TIC{variable_tic_id})\")\n",
     "\n",
-    "bfig.line(frequency, power, line_color='black')\n",
+    "bfig.line(1/frequency, power, line_color='black')\n",
+    "\n",
+    "# Labeling the axes\n",
+    "bfig.xaxis.axis_label = \"Period\"\n",
+    "bfig.yaxis.axis_label = \"Power\"\n",
     "\n",
     "plotting.show(bfig)"
    ]
@@ -672,10 +686,16 @@
    "source": [
     "bfig = plotting.figure(plot_width=850, plot_height=300, title=f\"Phased Lightcurve (TIC{variable_tic_id})\")\n",
     "\n",
+    "# Plotting the phased light curve\n",
     "bfig.circle(variable_lc[\"TIME\"]%period,variable_lc[\"FLUX_RAW\"], fill_color=\"black\",size=4, line_color=None)\n",
     "\n",
+    "# Plotting the periodic fit\n",
     "t_fit = np.linspace(0,period,100)\n",
     "bfig.line(t_fit, lomb.model(t_fit, 1/period), color='#1b9f00', line_width=2)\n",
+    "\n",
+    "# Labeling the axes\n",
+    "bfig.xaxis.axis_label = \"Phase (days)\"\n",
+    "bfig.yaxis.axis_label = \"Flux\"\n",
     "\n",
     "plotting.show(bfig)"
    ]
